--- a/style.css
+++ b/style.css
@@ -66,6 +66,7 @@ body {
 ul {
 	list-style: none;
 }*/
+
 blockquote,
 q {
 	quotes: none;
@@ -225,6 +226,7 @@ li.bypostauthor cite span {
 	background-image: linear-gradient(top, #f4f4f4, #e6e6e6);
 	border: 1px solid #d2d2d2;
 	border-radius: 3px;
+	box-shadow: 0 1px 2px #c5c5c5;
 	box-shadow: 0 1px 2px rgba(64, 64, 64, 0.1);
 }
 .menu-toggle,
@@ -764,7 +766,7 @@ article.sticky .featured-post {
 .entry-summary p,
 .comment-content p {
 	margin: 0 0 24px;
-	margin: 0 0 1.714285714rem;
+	margin: 0 0 1rem;
 	line-height: 1.714285714;
 }
 .entry-content ol,
@@ -925,8 +927,8 @@ img.aligncenter {
 	line-height: 1.714285714;
 }
 footer.entry-meta {
-	margin-top: 24px;
-	margin-top: 1.714285714rem;
+	margin-top: 0;
+	margin-bottom: 25px;
 	font-size: 13px;
 	font-size: 0.928571429rem;
 	line-height: 1.846153846;
@@ -1499,6 +1501,7 @@ img#wpstats {
 	.entry-header .entry-title {
 		font-size: 22px;
 		font-size: 1.571428571rem;
+		margin: 15px 20px 0 0;
 	}
 	#respond form input[type="text"] {
 		width: 46.333333333%;
